--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,29 @@ wsl_pis/pi1/ext4.vhdx
 wsl_pis/pi2/ext4.vhdx
 wsl_base.tar
 client/__pycache__/*
+
+
+
+# Ignore MNIST raw data files
+*.idx1-ubyte
+*.idx3-ubyte
+*.gz
+
+# PyTorch / Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pkl
+
+
+# Ignore OS trash
+.DS_Store
+Thumbs.db
+
+# Ignore virtualenv (if in project folder)
+venv
+data/MNIST/raw/t10k-images-idx3-ubyte
+data/MNIST/raw/t10k-labels-idx1-ubyte
+data/MNIST/raw/train-images-idx3-ubyte
+data/MNIST/raw/train-labels-idx1-ubyte
