improvement with sync

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@ Thumbs.db
 
 # Ignore virtualenv (if in project folder)
 venv
-data/MNIST/raw/t10k-images-idx3-ubyte
-data/MNIST/raw/t10k-labels-idx1-ubyte
-data/MNIST/raw/train-images-idx3-ubyte
-data/MNIST/raw/train-labels-idx1-ubyte
+
+# dataset
+server/data/*
+data/*
+
